--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,24 @@
-body {
-
+* {
+    
     text-align: center;
+    align-items: center;
+}
+
+#contents {
+    color: green;
+}
+
+.display {
+    
+
+    display: flex;
+    flex-direction: column;
+   
+}
+
+#contents > p {
+
+    border: 1px solid black;
+    height: 200px;
+    width: 200px;
 }
