--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
     
     text-align: center;
     align-items: center;
+    /* font-family: sans-serif; */
+    /* outline: 2px solid red; */
 }
 
 body {
@@ -10,23 +12,39 @@ body {
     width: 100vw;
 }
 
+
 #contents {
+    display: flex;
+    flex-wrap: nowrap;
     color: green;
+    border: 1px solid black;
+    height: 250px;
+    width: 250px;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.straight {
+
+   flex-direction: column;
+    width: 150px;
+}
+
+
+#contents > p {
+ 
+    flex-wrap: nowrap;
+    margin-bottom: 0px;
+    
 }
 
 .display {
     
-
     display: flex;
     flex-direction: column;
    
 }
 
-#contents > p {
-
-    
- 
-}
 
 nav {
 
@@ -38,6 +56,11 @@ nav {
     padding: 20px;
 }
 
+nav > .title {
+
+    margin-left: 100px;
+}
+
 
 .footer {
     background-color: rgb(180, 180, 184);
@@ -45,5 +68,59 @@ nav {
     justify-content: center;
     align-items: center;
     padding: 30px 10%;
-    margin-top: 500px;
+    margin-top: 450px;
 }
+
+
+/* Theres no orginaztion here but oh well here is the toggle style */
+
+.switch {
+    display: inline-block;
+    height: 34px;
+    position: relative;
+    width: 60px;
+  }
+  
+  .switch input {
+    display:none;
+  }
+  
+  .slider {
+    background-color: #ccc;
+    bottom: 0;
+    cursor: pointer;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    background-color: #fff;
+    bottom: 4px;
+    content: "";
+    height: 26px;
+    left: 4px;
+    position: absolute;
+    transition: .4s;
+    width: 26px;
+  }
+  
+  input:checked + .slider {
+    background-color: #66bb6a;
+  }
+  
+  input:checked + .slider:before {
+    transform: translateX(26px);
+  }
+  
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
+  
+  
